force-app/main/default/objects/TriggerHandler__mdt/TriggerHandler__mdt.object-meta.xml
<CustomObject>
    <description>(레거시) 오브젝트별 트리거 핸들러</description>
    <label>Trigger Handler</label>
</CustomObject>