force-app/main/default/objects/TriggerHandler__mdt/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <description>Handler Class</description>
    <inlineHelpText>Handler Class</inlineHelpText>
    <label>Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>