force-app/main/default/objects/TriggerHandler__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activate or not</description>
    <inlineHelpText>Activate or not</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>