force-app/main/default/objects/TriggerHandler__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Target Object API</description>
    <inlineHelpText>Target Object API</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>